# Cheka

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vercel.json
.claude/: launch.json
apps/mobile/: App.tsx  app.json  babel.config.js  package.json
apps/mobile/.expo/types/: router.d.ts
apps/mobile/app/: _layout.tsx  onboarding.tsx  submit.tsx
apps/mobile/app/(tabs)/: _layout.tsx  history.tsx  (+1 more)
apps/mobile/components/: AnalysisCard.tsx  AnimatedPressable.tsx  ConversationThread.tsx  LiquidTabBar.tsx  RiskBadge.tsx
apps/mobile/lib/: api.ts  demo-engine.ts  store.ts  theme.ts  types.ts
apps/web/: .env.example  package.json  run-eslint.mjs  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: app-progress.md  architecture.md  prd.md  roadmap.md
services/api/: .env.example  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/api/: __init__.py
services/api/app/api/routes/: __init__.py  health.py  jobs.py  webhooks.py
services/api/app/core/: config.py  supabase.py
services/api/app/schemas/: jobs.py
services/api/app/services/: document_extractor.py  follow_up.py  intake.py  job_processor.py  job_state_machine.py  job_store.py  job_store_selector.py  paystack.py  risk_engine.py  storage.py  supabase_job_store.py  whatsapp.py
services/api/cheka_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/migrations/: 01_initial_schema.sql
services/api/tests/: test_intake.py  test_job_state_machine.py  test_job_store.py  test_risk_engine.py
(+38 files in other folders)
